# wiktionary-to-vocabulary-card

./: CLI_INTEGRATION_SUMMARY.md  END_TO_END_TEST_SUMMARY.md  FILE_MANAGER_README.md  GENERATOR_INTEGRATION_SUMMARY.md  Makefile  README.md  integration_example.py  pyproject.toml  setup.cfg  test_cli_integration.py  test_end_to_end.py  test_file_manager.py  test_generator_integration.py
examples/: ase.html  ase.md  asettaa.html  asettaa.md  edes.html  edes.md  ehdokas  ehdokas.md  examples.json  pala.html  pala.md  saada.html  saada.md  tallessa.html  tallessa.md  tili.html  tili.md  yskiä  yskiä.html  yskiä.md
scripts/: 20250614_convert_into_multiple_files.py  20250615_add_article_section.py  202507191_convert_flashcard_format.py  202507192_remove_all_empty_lines.py  202507193_extract_article_tags.py  202507201_update_multi_wordtype_format.py  202507202_add_word_headers.py
src/wiktionary_vocab_card/: cli.py  config.py  debug.py  file_manager.py  generator.py  parser.py  processor.py  utils.py
