[metadata]
name = wiktionary_vocab_card
version = 0.1.0
description = Generate Obsidian vocabulary cards from Wiktionary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/wiktionary-vocab-card
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    beautifulsoup4 >=4.9.3
    requests >=2.24.0
    click >=7.1.2
    appdirs >=1.4.4
    pyyaml >=5.3.1

[options.entry_points]
console_scripts =
    wikt-vocab = wiktionary_vocab_card.cli:cli